# mcp-sonarr

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.example  Dockerfile  Dockerfile.clean  LICENSE  README.md  README_CLEAN.md  app.py  discover_tools_proxy_result.json  discover_tools_result.json  docker-compose.caddy.yml  docker-compose.yaml  docker-compose.yml  generate_openapi.py  pyproject.toml  requirements.txt  restart.sh  run_server.sh  search_tools.py  sonarr.py  stack.env  test_discover_tools_direct.py  test_discover_tools_proxy.py  test_filter.py  test_get_tool_schema.py  test_list_series.py  test_openai_tools.py  test_openai_tools_clean.py  tool_schema_result.json
app/: main.py  main_clean.py
app/api/: dependencies.py
app/api/routes/: __init__.py  mcp.py  mcp_clean.py  sonarr.py  system.py
app/config/: settings.py
app/core/: mcp_protocol.py  openai_tools.py  security.py  utils.py
app/models/: api.py  sonarr.py
app/services/: openai_tools_service.py  sonarr_service.py
scripts/: generate_openapi.py  generate_openapi_clean.py  update_json.py
src/mcp_sonarr/: __init__.py  auth.py  http_server.py  server.py  sonarr_client.py
static/: openapi.json  openapi.yaml
static/.well-known/: ai-plugin.json  openapi.json  openapi.yaml
tests/: __init__.py  test_api.py  test_client.py  test_sonarr_service.py
